--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "https://zzo-starter.netlify.app/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "zzo"
+enableRobotsTXT = true
