--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,13 +1,20 @@
 [en]
   title = "Hugo Zzo Theme"
   languageName = "English"
-  weight = 1
+  weight = 2
   languagedir = "ltr"
   contentdir = "content/en"
 
 [ko]
   title = "Hugo Zzo Theme"
   languageName = "한국어"
-  weight = 2
+  weight = 3
   languagedir = "ltr"
   contentdir = "content/ko"
+
+[ja]
+  title = "早稲田の本棚"
+  languageName = "Japanese"
+  weight = 1
+  languagedir = "ltr"
+  contentdir = "content/ja"
