--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -29,7 +29,7 @@ enablePhotoSwipe = true
 enableSearch = true
 enableSearchHighlight = true
 enableGoToTop = true
-enableWhoami = true
+enableWhoami = false
 summaryShape = "classic" # card, classic, compact
 searchResultPosition = "main" # side, main
 archiveGroupByDate = "2006" # "2006-01": group by month, "2006": group by year
