--- a/config/_default/menus.ja.toml
+++ b/config/_default/menus.ja.toml
@@ -4,17 +4,17 @@
   url = "about"
   weight = 1
 
-[[main]]
-  identifier = "archive"
-  name = "Archive"
-  url = "archive"
-  weight = 2
+# [[main]]
+#   identifier = "archive"
+#   name = "Archive"
+#   url = "archive"
+#   weight = 2
 
-[[main]]
-  identifier = "presentation"
-  name = "Pt"
-  url = "presentation"
-  weight = 3
+# [[main]]
+#   identifier = "presentation"
+#   name = "Pt"
+#   url = "presentation"
+#   weight = 3
 
 [[main]]
   identifier = "gallery"
@@ -22,10 +22,10 @@
   url = "gallery"
   weight = 4
     
-[[main]]
-  parent = "gallery"
-  name = "Cartoon"
-  url = "gallery/cartoon"
+# [[main]]
+#   parent = "gallery"
+#   name = "Cartoon"
+#   url = "gallery/cartoon"
 
 [[main]]
   parent = "gallery"
@@ -38,11 +38,11 @@
   url = "posts"
   weight = 5
 
-[[main]]
-  identifier = "showcase"
-  name = "Showcase"
-  url = "showcase"
-  weight = 6
+# [[main]]
+#   identifier = "showcase"
+#   name = "Showcase"
+#   url = "showcase"
+#   weight = 6
 
 [[main]]
   identifier = "publication"
