フッターからSNSリンクを非表示に

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -71,7 +71,7 @@ enableSidebarPostsByOrder = false
 # footer
 showPoweredBy = false
 showFeedLinks = true
-showSocialLinks = true
+showSocialLinks = false
 enableLangChange = true
 enableThemeChange = true
 
